<resources>
    <string name="app_name">GoogleLoginTemplate</string>

    //Login Screen
    <string name="google_login_template">Google Log-In Template</string>
    <string name="create_an_account">Create account</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="continue_google">Continue with Google</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="Log_in">Log-in</string>

</resources>